--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,9 +89,8 @@ html {
 	&:has([name='color-scheme']) {
 		color-scheme: light;
 	}
-	/* scroll  */
 	&::-webkit-scrollbar {
-		width: 10px;
+		width:0px;
 	}
 
 	&::-webkit-scrollbar-track {
@@ -104,7 +103,6 @@ html {
 	}
 }
 
-/* ============= REUSABLE CLASSES ============= */
 .section {
 	padding: 4rem 0;
 	.section__title {
@@ -139,7 +137,7 @@ html {
 
 	&:hover {
 		translate: 0px -4px;
-		box-shadow: 0px 3px 10px #ea4959;
+		box-shadow: 0px 3px 10px #45002f;
 	}
 }
 
@@ -235,12 +233,12 @@ html {
 						transition: color 0.3s;
 
 						&:hover {
-							color: #ea4959;
+							color: #ae006b;
 						}
 					}
 
 					.active {
-						border-bottom: 2px solid #ea4959;
+						border-bottom: 2px solid #91007b;
 					}
 				}
 			}
@@ -259,12 +257,8 @@ html {
 				}
 			}
 		}
-
-		/* toggles  */
 		.navbar__toggles {
 			gap: 1rem;
-
-			/* darkmode toggle */
 			.navbar__toggle--darkmode {
 				.navbar__toggle--darkmode-label {
 					width: 42px;
@@ -337,7 +331,6 @@ html {
 				}
 			}
 
-			/* language toggle */
 			.navbar__toggle--language {
 				.navbar__toggle--language-label {
 					width: 42px;
@@ -556,14 +549,12 @@ html {
 	}
 }
 
-/* ============= skills ============= */
 .skills {
 	background-color: var(--bg-color-section1);
 	.skills__container {
 		.skills__description {
 			text-align: center;
 		}
-		/* SLIDER  */
 		.skills__wrapper {
 			.skills__cards {
 				display: flex;
@@ -578,7 +569,7 @@ html {
 					border-radius: 1rem;
 					text-align: center;
 					width: inherit;
-					transition: 0.5s cubic-bezier(0.6, -0.28, 0.735, 0.045);
+					transition: 0.3s cubic-bezier(0.1, -0.28, 0.735, 0.045);
 					overflow: hidden;
 
 					.skills__cards-title {
@@ -631,7 +622,7 @@ html {
 	}
 }
 
-/* ============= Projects ============= */
+
 .projects {
 	background-color: var(--bg-color-section2);
 	.projects__container {
@@ -639,9 +630,16 @@ html {
 		.projects__inner {
 			margin: 0;
 			.projects__image {
-				border-radius: 5px;
+				z-index: var(--z-fixed);
+	            display: flex;
+	            height: 300px;
+	            animation: showing linear both;
+				animation-timeline: view();
+				animation-range: entry 25% cover 35%;
+                border-radius: 15px;
+                overflow: hidden;
 				img {
-					width: 100%;
+					
 					height: auto;
 					object-fit: cover;
 					border-radius: 5px;
@@ -758,7 +756,7 @@ html {
 					color: var(--bg-color-section2);
 					transition: text-shadow 0.3s;
 					&:hover {
-						text-shadow: 2px 3px #ea495955;
+						text-shadow: 2px 3px #6f007555;
 					}
 				}
 				.footer__social-link {
